Filters on mobile view fixed,logout added on admin

--- a/Frontend/Styles/styleIndex.css
+++ b/Frontend/Styles/styleIndex.css
@@ -21,14 +21,18 @@
     }
 
     input[type="submit"]{
-        width: 20%;
+        width: 30%;
         margin: 10px;
     }
 
-     a:link, a:visited {
+    a:link, a:visited {
             color: white;
             text-decoration: none;
         }
+    
+    #sn a, #mail a {
+        color: #595959 !important;
+    }
 }
 
 .searchInput{
