--- a/Frontend/Styles/stylePruzatelji.css
+++ b/Frontend/Styles/stylePruzatelji.css
@@ -10,6 +10,7 @@ h1{
     border-radius: 20px;
     border-width: 1px;
     color: #595959;
+    margin-bottom: 50px;
 }
 
 .submit{
